--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
 
   <!-- オーバーレイ動画 -->
   <div id="overlay-success" class="overlay">
-    <video id="overlay-video-success"  playsinline muted></video>
+    <video id="overlay-video-success" src="./kk62.mp4" playsinline muted></video>
   </div>
 
   <div id="overlay-fail" class="overlay">
-    <video id="overlay-video-fail" playsinline muted></video>
+    <video id="overlay-video-fail" src="./kk61.mp4" playsinline muted></video>
   </div>
 
   <div id="countdown">10</div>
