--- a/index.html
+++ b/index.html
@@ -87,8 +87,6 @@
       <audio id="kk5-audio" src="./kk5-audio.mp3" preload="auto"></audio>
       <audio id="kk6-audio" src="./kk6-audio.mp3" preload="auto"></audio>
       <audio id="kk7-audio" src="./kk7-audio.mp3" preload="auto"></audio>
-      <audio id="kk61-audio" src="./kk61-audio.mp3" preload="auto"></audio>
-      <audio id="kk62-audio" src="./kk62-audio.mp3" preload="auto"></audio>
 
     </a-assets>
 
@@ -144,11 +142,11 @@
 
   <!-- オーバーレイ動画 -->
   <div id="overlay-success" class="overlay">
-    <video id="overlay-video-success" src="./kk62.mp4" playsinline muted></video>
+    <video id="overlay-video-success" src="./kk61_12.mp4" playsinline muted></video>
   </div>
 
   <div id="overlay-fail" class="overlay">
-    <video id="overlay-video-fail" src="./kk61.mp4" playsinline muted></video>
+    <video id="overlay-video-fail" src="./kk61_1.mp4" playsinline muted></video>
   </div>
 
   <div id="countdown">10</div>
