--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
       <audio id="kk5-audio" src="./kk5-audio.mp3" preload="auto"></audio>
       <audio id="kk6-audio" src="./kk6-audio.mp3" preload="auto"></audio>
       <audio id="kk7-audio" src="./kk7-audio.mp3" preload="auto"></audio>
+      <audio id="kk61-audio" src="./kk61-audio.mp3" preload="auto"></audio>
+      <audio id="kk62-audio" src="./kk62-audio.mp3" preload="auto"></audio>
+
 
     </a-assets>
 
