--- a/index.html
+++ b/index.html
@@ -1,161 +1,248 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MindAR 16 Targets</title>
+document.addEventListener("DOMContentLoaded", () => {
+  const voiceMap = {};
+  for (let i = 1; i <= 8; i++) {
+    voiceMap[`voice${i}`] = document.getElementById(`voice${i}`);
+  }
 
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/mind-ar@1.2.5/dist/mindar-image-aframe.prod.js"></script>
+  const videoMap = {
+    kk1: document.getElementById("kk1"),
+    kk2: document.getElementById("kk2"),
+    kk3: document.getElementById("kk3"),
+    kk4: document.getElementById("kk4"),
+    kk5: document.getElementById("kk5"),
+    kk6: document.getElementById("kk6"),
+    kk7: document.getElementById("kk7"),
+    kk61: document.getElementById("kk61"),
+    kk62: document.getElementById("kk62")
+  };
 
-  <style>
-    html, body {
-      margin: 0;
-      overflow: hidden;
-      height: 100%;
-      background-color: white;
+  const audioMap = {
+    kk1: document.getElementById("kk1-audio"),
+    kk2: document.getElementById("kk2-audio"),
+    kk3: document.getElementById("kk3-audio"),
+    kk4: document.getElementById("kk4-audio"),
+    kk5: document.getElementById("kk5-audio"),
+    kk6: document.getElementById("kk6-audio"),
+    kk7: document.getElementById("kk7-audio"),
+    kk61: document.getElementById("kk61-audio"),
+    kk62: document.getElementById("kk62-audio")
+  };
+
+  const overlaySuccess = document.getElementById("overlay-success");
+  const overlayFail = document.getElementById("overlay-fail");
+  const overlayVideoSuccess = document.getElementById("overlay-video-success");
+  const overlayVideoFail = document.getElementById("overlay-video-fail");
+  const countdownEl = document.getElementById("countdown");
+
+  let challengeStarted = false;
+  let endingTriggered = false;
+  let countdownInterval, timeoutId;
+
+  const voiceQueue = [];
+  let currentVoice = null;
+	
+  const playedVoices = new Set();
+
+  function enqueueVoice(id) {
+  	if (currentVoice || voiceQueue.includes(id) || playedVoices.has(id)) return;
+
+  	voiceQueue.push(id);
+  	tryPlayNextVoice();
+  }
+
+  function tryPlayNextVoice() {
+    if (currentVoice || voiceQueue.length === 0) return;
+
+    const nextId = voiceQueue.shift();
+    const next = voiceMap[nextId];
+    if (!next) {
+      tryPlayNextVoice();
+      return;
     }
 
-    a-scene {
-      width: 100vw;
-      height: 100vh;
-      position: absolute;
-      top: 0;
-      left: 0;
+  	currentVoice = next;
+  	playedVoices.add(nextId); 
+  	currentVoice.currentTime = 0;
+  	currentVoice.play();
+  	currentVoice.onended = () => {
+    	currentVoice = null;
+		tryPlayNextVoice();
+    };
+  }
+
+  function resetMedia() {
+    Object.values(videoMap).forEach(v => {
+      v.pause();
+      v.currentTime = 0;
+    });
+    Object.values(audioMap).forEach(a => {
+      a.pause();
+      a.currentTime = 0;
+    });
+    Object.values(voiceMap).forEach(v => {
+      v.pause();
+      v.currentTime = 0;
+    });
+  }
+
+  function resetOverlay() {
+    overlaySuccess.style.display = "none";
+    overlayFail.style.display = "none";
+    overlayVideoSuccess.pause();
+    overlayVideoSuccess.currentTime = 0;
+    overlayVideoFail.pause();
+    overlayVideoFail.currentTime = 0;
+  }
+
+  function resetAll() {
+    resetMedia();
+    resetOverlay();
+    countdownEl.style.display = "none";
+    clearTimeout(timeoutId);
+    clearInterval(countdownInterval);
+    challengeStarted = false;
+    endingTriggered = false;
+    voiceQueue.length = 0;
+    currentVoice = null;
+  }
+
+function startCountdown() {
+  if (challengeStarted) return;
+  challengeStarted = true;
+  let count = 30;
+  countdownEl.textContent = count;
+  countdownEl.style.display = "block";
+
+  countdownInterval = setInterval(() => {
+    count--;
+    countdownEl.textContent = count;
+    if (count <= 0) {
+      clearInterval(countdownInterval);
+      countdownEl.style.display = "none";
     }
+  }, 1000);
 
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background-color: black;
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 9999;
+  timeoutId = setTimeout(() => {
+    if (!endingTriggered) {
+      overlayFail.style.display = "flex";
+      overlayVideoFail.play();
+      videoMap.kk61.play();
+
+      // 🎵 オーバーレイ動画が再生されたら音声を鳴らす
+      overlayVideoFail.onplay = () => {
+        audioMap.kk61.currentTime = 0;
+        audioMap.kk61.play().catch(e => console.warn("kk61 audio blocked:", e));
+      };
+
+      challengeStarted = false;
+      endingTriggered = true;
     }
+  }, 30000);
+}
 
-    .overlay video {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-    }
+  overlayVideoSuccess.onended = () => { overlaySuccess.style.display = "none"; };
+  overlayVideoFail.onended = () => { overlayFail.style.display = "none"; };
 
-    #overlay-video-success,
-    #overlay-video-fail {
-      transform: rotate(180deg);
-    }
+  for (let i = 1; i <= 16; i++) {
+    const el = document.getElementById(`target${i}`);
+    el.addEventListener("targetFound", () => {
+      if (challengeStarted && i !== 1 && !endingTriggered) return;
 
+      switch (i) {
+case 1:
+  if (challengeStarted && !endingTriggered) {
+    clearTimeout(timeoutId);
+    clearInterval(countdownInterval);
+    countdownEl.style.display = "none";
+    overlaySuccess.style.display = "flex";
+    overlayVideoSuccess.play();
+    videoMap.kk62.play();
 
-    #countdown {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) rotate(180deg);
-      font-size: 6em;
-      font-weight: bold;
-      color: red;
-      z-index: 9999;
-      display: none;
-      pointer-events: none;
-      text-shadow: 2px 2px 5px white;
-    }
-  </style>
-</head>
-<body>
-  <a-scene mindar-image="imageTargetSrc: ./targets3.mind; filterMinCF:0.0001; showStats: false; uiScanning: false;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights, alpha: true" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-    <a-assets>
-      <video id="kk1" src="./kk1.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk2" src="./kk2.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk3" src="./kk3.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk4" src="./kk4.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk5" src="./kk5.mp4" muted playsinline preload="auto"></video>
-      <video id="kk6" src="./kk6.mp4" muted playsinline preload="auto"></video>
-      <video id="kk7" src="./kk7.mp4" muted playsinline preload="auto"></video>
-      <audio id="voice1" src="./voice1.mp3" preload="auto"></audio>
-      <audio id="voice2" src="./voice2.mp3" preload="auto"></audio>
-      <audio id="voice3" src="./voice3.mp3" preload="auto"></audio>
-      <audio id="voice4" src="./voice4.mp3" preload="auto"></audio>
-      <audio id="voice5" src="./voice5.mp3" preload="auto"></audio>
-      <audio id="voice6" src="./voice6.mp3" preload="auto"></audio>
-      <audio id="voice7" src="./voice7.mp3" preload="auto"></audio>
-      <audio id="voice8" src="./voice8.mp3" preload="auto"></audio>
-      <audio id="kk1-audio" src="./kk1-audio.mp3" preload="auto"></audio>
-      <audio id="kk2-audio" src="./kk2-audio.mp3" preload="auto"></audio>
-      <audio id="kk3-audio" src="./kk3-audio.mp3" preload="auto"></audio>
-      <audio id="kk4-audio" src="./kk4-audio.mp3" preload="auto"></audio>
-      <audio id="kk5-audio" src="./kk5-audio.mp3" preload="auto"></audio>
-      <audio id="kk6-audio" src="./kk6-audio.mp3" preload="auto"></audio>
-      <audio id="kk7-audio" src="./kk7-audio.mp3" preload="auto"></audio>
-      <audio id="kk61-audio" src="./kk61-audio.mp3" preload="auto"></audio>
-      <audio id="kk62-audio" src="./kk62-audio.mp3" preload="auto"></audio>
+    // 🎵 成功オーバーレイ動画が再生されたら音声を鳴らす
+    overlayVideoSuccess.onplay = () => {
+      audioMap.kk62.currentTime = 0;
+      audioMap.kk62.play().catch(e => console.warn("kk62 audio blocked:", e));
+    };
 
+    challengeStarted = false;
+    endingTriggered = true;
+  } else if (!challengeStarted) {
+    enqueueVoice("voice1");
+  }
+  break;
 
-    </a-assets>
+        case 2:
+          videoMap.kk1.play();
+          audioMap.kk1.play();
+          break;
 
-    <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
+        case 3:
+          videoMap.kk2.play();
+          audioMap.kk2.play();
+          break;
 
-    <!-- ターゲット1〜16 -->
-<!-- ターゲット1〜16 -->
-<a-entity id="target1" mindar-image-target="targetIndex: 0"></a-entity>
+        case 4:
+          enqueueVoice("voice2");
+          break;
 
-<a-entity id="target2" mindar-image-target="targetIndex: 1">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk1"></a-plane>
-</a-entity>
+        case 5:
+          videoMap.kk3.play();
+          audioMap.kk3.play();
+          break;
 
-<a-entity id="target3" mindar-image-target="targetIndex: 2">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk2"></a-plane>
-</a-entity>
+        case 6:
+          videoMap.kk4.play();
+          audioMap.kk4.play();
+          break;
 
-<a-entity id="target4" mindar-image-target="targetIndex: 3"></a-entity>
+        case 7:
+          enqueueVoice("voice3");
+          break;
 
-<a-entity id="target5" mindar-image-target="targetIndex: 4">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk3"></a-plane>
-</a-entity>
+        case 8:
+          videoMap.kk5.play();
+          audioMap.kk5.play();
+          break;
 
-<a-entity id="target6" mindar-image-target="targetIndex: 5">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk4"></a-plane>
-</a-entity>
+        case 9:
+          enqueueVoice("voice4");
+          break;
 
-<a-entity id="target7" mindar-image-target="targetIndex: 6"></a-entity>
+        case 10:
+          enqueueVoice("voice5");
+          break;
 
-<a-entity id="target8" mindar-image-target="targetIndex: 7">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk5"></a-plane>
-</a-entity>
+        case 11:
+          videoMap.kk6.play();
+          audioMap.kk6.play();
+          break;
 
-<a-entity id="target9" mindar-image-target="targetIndex: 8"></a-entity>
+        case 12:
+          enqueueVoice("voice6");
+          break;
 
-<a-entity id="target10" mindar-image-target="targetIndex: 9"></a-entity>
+        case 13:
+          videoMap.kk7.play();
+          audioMap.kk7.play();
+          break;
 
-<a-entity id="target11" mindar-image-target="targetIndex: 10">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk6"></a-plane>
-</a-entity>
+        case 14:
+          enqueueVoice("voice7");
+          break;
 
-<a-entity id="target12" mindar-image-target="targetIndex: 11"></a-entity>
+        case 15:
+          enqueueVoice("voice8");
+          voiceMap.voice8.onended = () => {
+            startCountdown();
+          };
+          break;
 
-<a-entity id="target13" mindar-image-target="targetIndex: 12">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk7"></a-plane>
-</a-entity>
+        case 16:
+          resetAll();
+          break;
+      }
+    });
+  }
 
-<a-entity id="target14" mindar-image-target="targetIndex: 13"></a-entity>
-<a-entity id="target15" mindar-image-target="targetIndex: 14"></a-entity>
-<a-entity id="target16" mindar-image-target="targetIndex: 15"></a-entity>
-
-  </a-scene>
-
-  <!-- オーバーレイ動画 -->
-  <div id="overlay-success" class="overlay">
-    <video id="overlay-video-success" src="./kk62.mp4" playsinline muted></video>
-  </div>
-
-  <div id="overlay-fail" class="overlay">
-    <video id="overlay-video-fail" src="./kk61.mp4" playsinline muted></video>
-  </div>
-
-  <div id="countdown">10</div>
-
-<script src="script.js"></script>
-
-
-</body>
-</html>
+  resetAll();
+});
