--- a/index.html
+++ b/index.html
@@ -80,15 +80,13 @@
       <audio id="voice6" src="./voice6.mp3" preload="auto"></audio>
       <audio id="voice7" src="./voice7.mp3" preload="auto"></audio>
       <audio id="voice8" src="./voice8.mp3" preload="auto"></audio>
+      <audio id="voice9" src="./voice9.mp3" preload="auto"></audio>
+      <audio id="voice10" src="./voice10.mp3" preload="auto"></audio>
+      <audio id="voice11" src="./voice11.mp3" preload="auto"></audio>
       <audio id="kk1-audio" src="./kk1-audio.mp3" preload="auto"></audio>
       <audio id="kk2-audio" src="./kk2-audio.mp3" preload="auto"></audio>
       <audio id="kk3-audio" src="./kk3-audio.mp3" preload="auto"></audio>
       <audio id="kk4-audio" src="./kk4-audio.mp3" preload="auto"></audio>
-      <audio id="kk5-audio" src="./kk5-audio.mp3" preload="auto"></audio>
-      <audio id="kk6-audio" src="./kk6-audio.mp3" preload="auto"></audio>
-      <audio id="kk7-audio" src="./kk7-audio.mp3" preload="auto"></audio>
-      <audio id="kk61-audio" src="./kk61-audio.mp3" preload="auto"></audio>
-      <audio id="kk62-audio" src="./kk62-audio.mp3" preload="auto"></audio>
 
     </a-assets>
 
