--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 
   <!-- オーバーレイ動画 -->
   <div id="overlay-success" class="overlay">
-    <video id="overlay-video-success" src="./kk62.mp4" playsinline muted></video>
+    <video id="overlay-video-success" src="./kk62.mp4" playsinline></video>
   </div>
 
   <div id="overlay-fail" class="overlay">
-    <video id="overlay-video-fail" src="./kk61.mp4" playsinline muted></video>
+    <video id="overlay-video-fail" src="./kk61.mp4" playsinline></video>
   </div>
 
   <div id="countdown">10</div>
