--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       transform: rotate(180deg);
     }
 
-
     #countdown {
       position: fixed;
       top: 50%;
@@ -65,13 +64,22 @@
 <body>
   <a-scene mindar-image="imageTargetSrc: ./targets4.mind; filterMinCF:0.0001; showStats: false; uiScanning: false;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights, alpha: true" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
     <a-assets>
+      <!-- 動画 kk1～kk13 を追加 -->
       <video id="kk1" src="./kk1.mp4" loop muted playsinline crossorigin="anonymous"></video>
       <video id="kk2" src="./kk2.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk3" src="./kk3.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk4" src="./kk4.mp4" loop muted playsinline crossorigin="anonymous"></video>
-      <video id="kk5" src="./kk5.mp4" muted playsinline preload="auto"></video>
-      <video id="kk6" src="./kk6.mp4" muted playsinline preload="auto"></video>
-      <video id="kk7" src="./kk7.mp4" muted playsinline preload="auto"></video>
+      <video id="kk3" src="./kk3.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk4" src="./kk4.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk5" src="./kk5.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk6" src="./kk6.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk7" src="./kk7.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk8" src="./kk8.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk9" src="./kk9.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk10" src="./kk10.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk11" src="./kk11.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk12" src="./kk12.mp4" loop muted playsinline preload="auto"></video>
+      <video id="kk13" src="./kk13.mp4" loop muted playsinline preload="auto"></video>
+
+      <!-- 音声ファイルはそのまま -->
       <audio id="voice1" src="./voice1.mp3" preload="auto"></audio>
       <audio id="voice2" src="./voice2.mp3" preload="auto"></audio>
       <audio id="voice3" src="./voice3.mp3" preload="auto"></audio>
@@ -87,56 +95,67 @@
       <audio id="kk2-audio" src="./kk2-audio.mp3" preload="auto"></audio>
       <audio id="kk3-audio" src="./kk3-audio.mp3" preload="auto"></audio>
       <audio id="kk4-audio" src="./kk4-audio.mp3" preload="auto"></audio>
-
     </a-assets>
 
     <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
     <!-- ターゲット1〜16 -->
-<!-- ターゲット1〜16 -->
-<a-entity id="target1" mindar-image-target="targetIndex: 0"></a-entity>
+    <a-entity id="target1" mindar-image-target="targetIndex: 0"></a-entity>
 
-<a-entity id="target2" mindar-image-target="targetIndex: 1">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk1"></a-plane>
-</a-entity>
+    <a-entity id="target2" mindar-image-target="targetIndex: 1">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk1"></a-plane>
+    </a-entity>
 
-<a-entity id="target3" mindar-image-target="targetIndex: 2">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk2"></a-plane>
-</a-entity>
+    <a-entity id="target3" mindar-image-target="targetIndex: 2">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk2"></a-plane>
+    </a-entity>
 
-<a-entity id="target4" mindar-image-target="targetIndex: 3"></a-entity>
+    <a-entity id="target4" mindar-image-target="targetIndex: 3">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk3"></a-plane>
+    </a-entity>
 
-<a-entity id="target5" mindar-image-target="targetIndex: 4">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk3"></a-plane>
-</a-entity>
+    <a-entity id="target5" mindar-image-target="targetIndex: 4">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk4"></a-plane>
+    </a-entity>
 
-<a-entity id="target6" mindar-image-target="targetIndex: 5">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk4"></a-plane>
-</a-entity>
+    <a-entity id="target6" mindar-image-target="targetIndex: 5">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk5"></a-plane>
+    </a-entity>
 
-<a-entity id="target7" mindar-image-target="targetIndex: 6"></a-entity>
+    <a-entity id="target7" mindar-image-target="targetIndex: 6">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk6"></a-plane>
+    </a-entity>
 
-<a-entity id="target8" mindar-image-target="targetIndex: 7">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk5"></a-plane>
-</a-entity>
+    <a-entity id="target8" mindar-image-target="targetIndex: 7">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk7"></a-plane>
+    </a-entity>
 
-<a-entity id="target9" mindar-image-target="targetIndex: 8"></a-entity>
+    <a-entity id="target9" mindar-image-target="targetIndex: 8">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk8"></a-plane>
+    </a-entity>
 
-<a-entity id="target10" mindar-image-target="targetIndex: 9"></a-entity>
+    <a-entity id="target10" mindar-image-target="targetIndex: 9">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk9"></a-plane>
+    </a-entity>
 
-<a-entity id="target11" mindar-image-target="targetIndex: 10">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk6"></a-plane>
-</a-entity>
+    <a-entity id="target11" mindar-image-target="targetIndex: 10">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk10"></a-plane>
+    </a-entity>
 
-<a-entity id="target12" mindar-image-target="targetIndex: 11"></a-entity>
+    <a-entity id="target12" mindar-image-target="targetIndex: 11">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk11"></a-plane>
+    </a-entity>
 
-<a-entity id="target13" mindar-image-target="targetIndex: 12">
-  <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk7"></a-plane>
-</a-entity>
+    <a-entity id="target13" mindar-image-target="targetIndex: 12">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk12"></a-plane>
+    </a-entity>
 
-<a-entity id="target14" mindar-image-target="targetIndex: 13"></a-entity>
-<a-entity id="target15" mindar-image-target="targetIndex: 14"></a-entity>
-<a-entity id="target16" mindar-image-target="targetIndex: 15"></a-entity>
+    <a-entity id="target14" mindar-image-target="targetIndex: 13">
+      <a-plane width="2" height="1.12" position="0 0 0" material="shader: flat; src: #kk13"></a-plane>
+    </a-entity>
+
+    <a-entity id="target15" mindar-image-target="targetIndex: 14"></a-entity>
+    <a-entity id="target16" mindar-image-target="targetIndex: 15"></a-entity>
 
   </a-scene>
 
@@ -151,8 +170,6 @@
 
   <div id="countdown">10</div>
 
-<script src="script.js"></script>
-
-
+  <script src="script.js"></script>
 </body>
 </html>
